Complete metagenome analysis in notebooks

--- a/notebooks/simhash/test copy.ipynb
+++ b/notebooks/simhash/test copy.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,9 @@
     "import scipy as sp\n",
     "import seaborn\n",
     "import sharedmem\n",
-    "import pygraphviz"
+    "import pygraphviz\n",
+    "from typing import Mapping  \n",
+    "import mmh3"
    ]
   },
   {
@@ -102,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 543.88 MiB, increment: 0.00 MiB\n"
+      "peak memory: 544.97 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +279,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "read_csv() got an unexpected keyword argument 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/miaocj/docker_dir/test_simhash.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m,index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: read_csv() got an unexpected keyword argument 'index'"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/home/miaocj/docker_dir/test_simhash.csv',sep='\\t',ign)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +324,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>description</th>\n",
        "      <th>n_neighbors</th>\n",
        "      <th>repeat_time</th>\n",
@@ -315,224 +339,233 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
        "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.009106</td>\n",
-       "      <td>0.000765</td>\n",
-       "      <td>0.008987</td>\n",
-       "      <td>0.007906</td>\n",
-       "      <td>5071</td>\n",
-       "      <td>0.993145</td>\n",
+       "      <td>0.010583</td>\n",
+       "      <td>0.000784</td>\n",
+       "      <td>0.003138</td>\n",
+       "      <td>0.002433</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>0.998825</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>23</th>\n",
+       "      <td>23</td>\n",
        "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
+       "      <td>6</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.284434</td>\n",
-       "      <td>0.052794</td>\n",
-       "      <td>0.199456</td>\n",
-       "      <td>0.387492</td>\n",
-       "      <td>447</td>\n",
-       "      <td>0.087544</td>\n",
-       "      <td>512</td>\n",
+       "      <td>0.404492</td>\n",
+       "      <td>0.093531</td>\n",
+       "      <td>0.090165</td>\n",
+       "      <td>0.218224</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>0.254407</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>42</th>\n",
+       "      <td>42</td>\n",
        "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
        "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.612711</td>\n",
-       "      <td>0.105784</td>\n",
-       "      <td>0.428689</td>\n",
-       "      <td>0.774681</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.002742</td>\n",
-       "      <td>648</td>\n",
+       "      <td>0.732396</td>\n",
+       "      <td>0.190486</td>\n",
+       "      <td>0.170414</td>\n",
+       "      <td>0.463916</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0.039170</td>\n",
+       "      <td>262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
+       "      <th>61</th>\n",
+       "      <td>61</td>\n",
        "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
        "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.612720</td>\n",
-       "      <td>0.105420</td>\n",
-       "      <td>0.428766</td>\n",
-       "      <td>0.772147</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.004896</td>\n",
-       "      <td>624</td>\n",
+       "      <td>0.733710</td>\n",
+       "      <td>0.188656</td>\n",
+       "      <td>0.170869</td>\n",
+       "      <td>0.459862</td>\n",
+       "      <td>212</td>\n",
+       "      <td>0.041520</td>\n",
+       "      <td>344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.612711</td>\n",
-       "      <td>0.105784</td>\n",
-       "      <td>0.428689</td>\n",
-       "      <td>0.774681</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.002742</td>\n",
-       "      <td>648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.631430</td>\n",
-       "      <td>0.108589</td>\n",
-       "      <td>0.441694</td>\n",
-       "      <td>0.795054</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.002742</td>\n",
-       "      <td>553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0.640951</td>\n",
-       "      <td>0.109592</td>\n",
-       "      <td>0.448608</td>\n",
-       "      <td>0.802858</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.001763</td>\n",
-       "      <td>553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0.646407</td>\n",
-       "      <td>0.110500</td>\n",
-       "      <td>0.452734</td>\n",
-       "      <td>0.810055</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.001371</td>\n",
-       "      <td>648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0.649258</td>\n",
-       "      <td>0.110964</td>\n",
-       "      <td>0.454700</td>\n",
-       "      <td>0.813400</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.001371</td>\n",
-       "      <td>549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0.652616</td>\n",
-       "      <td>0.111306</td>\n",
-       "      <td>0.457120</td>\n",
-       "      <td>0.816035</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.001567</td>\n",
-       "      <td>549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
+       "      <th>80</th>\n",
        "      <td>80</td>\n",
-       "      <td>0.655922</td>\n",
-       "      <td>0.111783</td>\n",
-       "      <td>0.459125</td>\n",
-       "      <td>0.818974</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.001371</td>\n",
-       "      <td>549</td>\n",
+       "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.732396</td>\n",
+       "      <td>0.190486</td>\n",
+       "      <td>0.170414</td>\n",
+       "      <td>0.463916</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0.039170</td>\n",
+       "      <td>262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1448</th>\n",
+       "      <td>156</td>\n",
        "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.768928</td>\n",
+       "      <td>0.201489</td>\n",
+       "      <td>0.179972</td>\n",
+       "      <td>0.493614</td>\n",
+       "      <td>139</td>\n",
+       "      <td>0.027223</td>\n",
+       "      <td>271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1467</th>\n",
+       "      <td>175</td>\n",
+       "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0.770857</td>\n",
+       "      <td>0.202796</td>\n",
+       "      <td>0.180476</td>\n",
+       "      <td>0.496959</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0.027027</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1486</th>\n",
+       "      <td>194</td>\n",
+       "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.775372</td>\n",
+       "      <td>0.204339</td>\n",
+       "      <td>0.181705</td>\n",
+       "      <td>0.501216</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0.026635</td>\n",
+       "      <td>396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1505</th>\n",
+       "      <td>213</td>\n",
+       "      <td>SimHash</td>\n",
+       "      <td>6</td>\n",
        "      <td>90</td>\n",
-       "      <td>0.657215</td>\n",
-       "      <td>0.112107</td>\n",
-       "      <td>0.459890</td>\n",
-       "      <td>0.821103</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.001175</td>\n",
-       "      <td>549</td>\n",
+       "      <td>0.777328</td>\n",
+       "      <td>0.204199</td>\n",
+       "      <td>0.182141</td>\n",
+       "      <td>0.500811</td>\n",
+       "      <td>130</td>\n",
+       "      <td>0.025460</td>\n",
+       "      <td>400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
+       "      <th>1524</th>\n",
+       "      <td>232</td>\n",
        "      <td>SimHash</td>\n",
-       "      <td>20</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.658109</td>\n",
-       "      <td>0.111939</td>\n",
-       "      <td>0.460752</td>\n",
-       "      <td>0.820292</td>\n",
        "      <td>6</td>\n",
-       "      <td>0.001175</td>\n",
-       "      <td>549</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.778751</td>\n",
+       "      <td>0.205552</td>\n",
+       "      <td>0.182558</td>\n",
+       "      <td>0.504358</td>\n",
+       "      <td>129</td>\n",
+       "      <td>0.025264</td>\n",
+       "      <td>400</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>81 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    description  n_neighbors  repeat_time  precision  nr_precision    recall  \\\n",
-       "18      SimHash           20           20   0.009106      0.000765  0.008987   \n",
-       "37      SimHash           20            2   0.284434      0.052794  0.199456   \n",
-       "56      SimHash           20           20   0.612711      0.105784  0.428689   \n",
-       "75      SimHash           20           20   0.612720      0.105420  0.428766   \n",
-       "94      SimHash           20           20   0.612711      0.105784  0.428689   \n",
-       "113     SimHash           20           30   0.631430      0.108589  0.441694   \n",
-       "132     SimHash           20           40   0.640951      0.109592  0.448608   \n",
-       "151     SimHash           20           50   0.646407      0.110500  0.452734   \n",
-       "170     SimHash           20           60   0.649258      0.110964  0.454700   \n",
-       "189     SimHash           20           70   0.652616      0.111306  0.457120   \n",
-       "208     SimHash           20           80   0.655922      0.111783  0.459125   \n",
-       "227     SimHash           20           90   0.657215      0.112107  0.459890   \n",
-       "246     SimHash           20          100   0.658109      0.111939  0.460752   \n",
+       "      Unnamed: 0 description  n_neighbors  repeat_time  precision  \\\n",
+       "4              4     SimHash            6           20   0.010583   \n",
+       "23            23     SimHash            6            2   0.404492   \n",
+       "42            42     SimHash            6           20   0.732396   \n",
+       "61            61     SimHash            6           20   0.733710   \n",
+       "80            80     SimHash            6           20   0.732396   \n",
+       "...          ...         ...          ...          ...        ...   \n",
+       "1448         156     SimHash            6           60   0.768928   \n",
+       "1467         175     SimHash            6           70   0.770857   \n",
+       "1486         194     SimHash            6           80   0.775372   \n",
+       "1505         213     SimHash            6           90   0.777328   \n",
+       "1524         232     SimHash            6          100   0.778751   \n",
        "\n",
-       "     nr_recall  singleton_count  singleton_fraction  N50  \n",
-       "18    0.007906             5071            0.993145    1  \n",
-       "37    0.387492              447            0.087544  512  \n",
-       "56    0.774681               14            0.002742  648  \n",
-       "75    0.772147               25            0.004896  624  \n",
-       "94    0.774681               14            0.002742  648  \n",
-       "113   0.795054               14            0.002742  553  \n",
-       "132   0.802858                9            0.001763  553  \n",
-       "151   0.810055                7            0.001371  648  \n",
-       "170   0.813400                7            0.001371  549  \n",
-       "189   0.816035                8            0.001567  549  \n",
-       "208   0.818974                7            0.001371  549  \n",
-       "227   0.821103                6            0.001175  549  \n",
-       "246   0.820292                6            0.001175  549  "
+       "      nr_precision    recall  nr_recall  singleton_count  singleton_fraction  \\\n",
+       "4         0.000784  0.003138   0.002433             5100            0.998825   \n",
+       "23        0.093531  0.090165   0.218224             1299            0.254407   \n",
+       "42        0.190486  0.170414   0.463916              200            0.039170   \n",
+       "61        0.188656  0.170869   0.459862              212            0.041520   \n",
+       "80        0.190486  0.170414   0.463916              200            0.039170   \n",
+       "...            ...       ...        ...              ...                 ...   \n",
+       "1448      0.201489  0.179972   0.493614              139            0.027223   \n",
+       "1467      0.202796  0.180476   0.496959              138            0.027027   \n",
+       "1486      0.204339  0.181705   0.501216              136            0.026635   \n",
+       "1505      0.204199  0.182141   0.500811              130            0.025460   \n",
+       "1524      0.205552  0.182558   0.504358              129            0.025264   \n",
+       "\n",
+       "      N50  \n",
+       "4       1  \n",
+       "23     88  \n",
+       "42    262  \n",
+       "61    344  \n",
+       "80    262  \n",
+       "...   ...  \n",
+       "1448  271  \n",
+       "1467  270  \n",
+       "1486  396  \n",
+       "1505  400  \n",
+       "1524  400  \n",
+       "\n",
+       "[81 rows x 11 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df.n_neighbors==20]"
+    "df[df.n_neighbors==6 &]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nbrs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m indices \u001b[38;5;241m=\u001b[39m nbrs\u001b[38;5;241m.\u001b[39mkneighbors(concat_simhash,return_distance\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m nbr_indices \u001b[38;5;241m=\u001b[39m indices[:, \u001b[38;5;241m1\u001b[39m:]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nbrs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "indices = nbrs.kneighbors(concat_simhash,return_distance=False)\n",
     "nbr_indices = indices[:, 1:]"
@@ -2902,13 +2935,6 @@
     "indices = nbrs.kneighbors(concat_simhash,return_distance=False)\n",
     "nbr_indices = indices[:, 1:]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
