--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -6,12 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/4262b1bf4bf1ffb403c0eb7a42ad5906_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/4506eccf78279d93d0e8a34c035e91c5_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/6bda807e3967eae797c7b1b9eeaee8db_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/c2a47d89d1d34e789fdf782557bb7194_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/c6c5514ada15b890fb27d1e36371554c_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/d964a294c2d0fef56a434c021026281e_/lib/python3.12/site-packages\")\n",
+    "sys.path.append(\"/home/miaocj/docker_dir/kNN-overlap-finder/.snakemake/conda/e1c932db5cd4271709e54d8028824bc9_/lib/python3.12/site-packages\")\n",
     "import pickle, os, gzip, json, sys, itertools\n",
     "from pathlib import Path\n",
     "from importlib import reload\n",
     "from dataclasses import dataclass, field\n",
     "import collections\n",
-    "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -19,10 +26,6 @@
     "import scipy as sp\n",
     "import seaborn\n",
     "import sharedmem\n",
-    "\n",
-    "plt.rcParams[\"figure.facecolor\"] = \"white\"\n",
-    "plt.rcParams[\"figure.dpi\"] = 300\n",
-    "\n",
     "\n",
     "sys.path.append(\"scripts\")\n",
     "sys.path.append(\"../../scripts\")"
@@ -88,38 +91,10 @@
     "    read_features = json.load(f)\n",
     "    read_features = {i: read_features[i] for i in meta_df.index}\n",
     "\n",
-    "feature_weights = {i: 1 for i in range(feature_matrix.shape[1])}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open(time_path, 'rb') as file:  \n",
     "    time_dict = pickle.load(file) \n",
     "data = np.load(nbr_path) \n",
     "nbr_indices = data['arr_0']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_ids = np.array(list(read_features))\n",
-    "graphs = collections.defaultdict(dict)\n",
-    "k_values = np.arange(2, max_n_neighbors + 1)\n",
-    "for k in k_values:\n",
-    "    graph = OverlapGraph.from_neighbor_indices(\n",
-    "        neighbor_indices=nbr_indices,\n",
-    "        n_neighbors=k,\n",
-    "        read_ids=read_ids,\n",
-    "        require_mutual_neighbors=False,\n",
-    "    )\n",
-    "    graphs[i][k] = graph"
    ]
   },
   {
@@ -154,16 +129,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "max_n_neighbors=20\n",
     "df_rows = []\n",
+    "read_ids = np.array(list(read_features))\n",
+    "k_values = np.arange(2, max_n_neighbors + 1)\n",
     "\n",
     "for k in k_values:\n",
-    "    graph = graphs[k]\n",
+    "    graph = OverlapGraph.from_neighbor_indices(\n",
+    "    neighbor_indices=nbr_indices,\n",
+    "    n_neighbors=k,\n",
+    "    read_ids=read_ids,\n",
+    "    require_mutual_neighbors=False,)\n",
     "    graph_stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
     "    time_stats = {\"elapsed_time:\" + k: v for k, v in time_dict.items()}  \n",
-    "    stats = {\"description\": config.description, \"n_neighbors\": k, \n",
+    "    stats = {\"description\": method, \"n_neighbors\": k, \n",
     "                **graph_stats, **time_stats}\n",
     "    df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
+    "print(df)\n",
     "df['connected_fraction'] = 1 - df['singleton_fraction']\n",
     "df.to_csv(stat_path,sep='\\t')"
    ]
