--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -92,22 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7ae58181-508b-4162-a3a0-33b45ae40fd0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'snakemake' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sample \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m dataset \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m region \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mregion\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'snakemake' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sample = snakemake.wildcards['sample']\n",
@@ -218,6 +206,7 @@
     "    n_neighbors=max_n_neighbors,\n",
     "    processes=processes,\n",
     ")\n",
+    "print(nbr_dict[0])\n",
     "\n",
     "np.savez(nbr_path, nbr_dict[0])\n",
     "with open(time_path, 'wb') as file:  \n",
