simhash for metagenome complete

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -68,7 +68,6 @@
     "tsv_path = snakemake.input['metadata']\n",
     "json_path = snakemake.input['read_features']\n",
     "nbr_path = snakemake.input['nbr_indice']\n",
-    "time_path = snakemake.input['time_use']\n",
     "\n",
     "stat_path = snakemake.output['overlap']\n",
     "\n",
@@ -90,9 +89,7 @@
     "with gzip.open(json_path, \"rt\") as f:\n",
     "    read_features = json.load(f)\n",
     "    read_features = {i: read_features[i] for i in meta_df.index}\n",
-    "\n",
-    "with open(time_path, 'rb') as file:  \n",
-    "    time_dict = pickle.load(file) \n",
+    "    \n",
     "data = np.load(nbr_path) \n",
     "nbr_indices = data['arr_0']"
    ]
@@ -141,9 +138,8 @@
     "    read_ids=read_ids,\n",
     "    require_mutual_neighbors=False,)\n",
     "    graph_stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
-    "    time_stats = {\"elapsed_time:\" + k: v for k, v in time_dict.items()}  \n",
     "    stats = {\"description\": method, \"n_neighbors\": k, \n",
-    "                **graph_stats, **time_stats}\n",
+    "                **graph_stats}\n",
     "    df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
     "print(df)\n",
