--- a/workflow/notebooks/generate_config_dict.ipynb
+++ b/workflow/notebooks/generate_config_dict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "3d2834bd-b0a2-4b1f-b3ca-2e007203e03a",
    "metadata": {},
    "outputs": [],
@@ -40,15 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "61c67746-c2ec-44ea-a403-8f3239df5786",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/miaocj/docker_dir/kNN-overlap-finder/scripts/../lib\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SimHash' from 'nearest_neighbors' (/home/miaocj/docker_dir/kNN-overlap-finder/workflow/notebooks/../../scripts/nearest_neighbors.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata_io\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_fwd_id, get_fwd_id, get_sibling_id\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdim_reduction\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SpectralEmbedding, scBiMapEmbedding\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnearest_neighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      4\u001b[0m     ExactNearestNeighbors,\n\u001b[1;32m      5\u001b[0m     NNDescent,\n\u001b[1;32m      6\u001b[0m     WeightedLowHash,\n\u001b[1;32m      7\u001b[0m     PAFNearestNeighbors,\n\u001b[1;32m      8\u001b[0m     LowHash,\n\u001b[1;32m      9\u001b[0m     HNSW,\n\u001b[1;32m     10\u001b[0m     ProductQuantization,\n\u001b[1;32m     11\u001b[0m     _NearestNeighbors,\n\u001b[1;32m     12\u001b[0m     IVFProductQuantization,\n\u001b[1;32m     13\u001b[0m     SimHash,\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtruth\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_overlaps\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SimHash' from 'nearest_neighbors' (/home/miaocj/docker_dir/kNN-overlap-finder/workflow/notebooks/../../scripts/nearest_neighbors.py)"
      ]
     }
    ],
@@ -65,6 +69,7 @@
     "    ProductQuantization,\n",
     "    _NearestNeighbors,\n",
     "    IVFProductQuantization,\n",
+    "    SimHash,\n",
     ")\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
@@ -2632,7 +2637,11 @@
     "            nearest_neighbors_method=NNDescent,\n",
     "            description='NNDescent,Euclidean,None,None',\n",
     "            tfidf='None',\n",
-    "            nearest_neighbors_kw=dict(metric='euclidean')) "
+    "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
+    "config_dict[\"SimHash\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=SimHash,\n",
+    "            description='SimHash,Cosine,None,None',\n",
+    "            tfidf='None') "
    ]
   },
   {
