--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -57,10 +57,11 @@
     "    ProductQuantization,\n",
     "    _NearestNeighbors,\n",
     "    IVFProductQuantization,\n",
+    "    SimHash,\n",
     ")\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
-    "from evaluate import NearestNeighborsConfig, mp_compute_nearest_neighbors"
+    "from evaluate import NearestNeighborsConfig, compute_nearest_neighbors"
    ]
   },
   {
@@ -115,7 +116,6 @@
     "json_path = snakemake.input['read_features']\n",
     "\n",
     "nbr_path = snakemake.output['nbr_indice']\n",
-    "time_path = snakemake.output['time_use']\n",
     "threads  = snakemake.threads\n",
     "\n",
     "print(sample, dataset, region)"
@@ -195,22 +195,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processes = threads\n",
-    "config = config_dict[method]\n",
-    "configs = [config]\n",
-    "kw = dict(data=feature_matrix)\n",
+    "if 'SimHash' not in method:\n",
+    "    config = config_dict[method]\n",
+    "    kw = dict(data=feature_matrix)\n",
     "\n",
-    "nbr_dict, time_dict, memory_dict = mp_compute_nearest_neighbors(\n",
-    "    data=feature_matrix,\n",
-    "    configs=configs,\n",
-    "    n_neighbors=max_n_neighbors,\n",
-    "    processes=processes,\n",
-    ")\n",
-    "print(nbr_dict[0])\n",
+    "    neighbor_indices, elapsed_time, peak_memory = compute_nearest_neighbors(\n",
+    "        data=feature_matrix,\n",
+    "        config=config,\n",
+    "        n_neighbors=max_n_neighbors,\n",
+    "        read_features=read_features,\n",
+    "    )\n",
+    "    print(neighbor_indices)\n",
+    "else:\n",
+    "    tf = True if 'TF' in method else False\n",
+    "    idf =  True if 'IDF' in method else False\n",
+    "    neighbor_indices = SimHash().get_neighbors(feature_matrix,read_features,max_n_neighbors,tf=tf,idf =idf)\n",
     "\n",
-    "np.savez(nbr_path, nbr_dict[0])\n",
-    "with open(time_path, 'wb') as file:  \n",
-    "    pickle.dump(time_dict[0], file) \n"
+    "np.savez(nbr_path, neighbor_indices)\n"
    ]
   }
  ],
