--- a/workflow/notebooks/generate_config_dict.ipynb
+++ b/workflow/notebooks/generate_config_dict.ipynb
@@ -40,19 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "61c67746-c2ec-44ea-a403-8f3239df5786",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'SimHash' from 'nearest_neighbors' (/home/miaocj/docker_dir/kNN-overlap-finder/workflow/notebooks/../../scripts/nearest_neighbors.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata_io\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_fwd_id, get_fwd_id, get_sibling_id\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdim_reduction\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SpectralEmbedding, scBiMapEmbedding\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnearest_neighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      4\u001b[0m     ExactNearestNeighbors,\n\u001b[1;32m      5\u001b[0m     NNDescent,\n\u001b[1;32m      6\u001b[0m     WeightedLowHash,\n\u001b[1;32m      7\u001b[0m     PAFNearestNeighbors,\n\u001b[1;32m      8\u001b[0m     LowHash,\n\u001b[1;32m      9\u001b[0m     HNSW,\n\u001b[1;32m     10\u001b[0m     ProductQuantization,\n\u001b[1;32m     11\u001b[0m     _NearestNeighbors,\n\u001b[1;32m     12\u001b[0m     IVFProductQuantization,\n\u001b[1;32m     13\u001b[0m     SimHash,\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtruth\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_overlaps\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SimHash' from 'nearest_neighbors' (/home/miaocj/docker_dir/kNN-overlap-finder/workflow/notebooks/../../scripts/nearest_neighbors.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/miaocj/docker_dir/kNN-overlap-finder/scripts/../lib\n"
      ]
     }
    ],
@@ -1413,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "a9a4acff",
    "metadata": {},
    "outputs": [],
@@ -1421,6 +1417,7 @@
     "MAX_SAMPLE_SIZE = int(1e9)\n",
     "COVERAGE_DEPTH = 20\n",
     "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
+    "read_features = []\n",
     "config_dict = {}\n",
     "config_dict[\"Exact_Euclidean_Spectural_100d_TF\"]=NearestNeighborsConfig(\n",
     "            nearest_neighbors_method=ExactNearestNeighbors,\n",
@@ -2638,15 +2635,27 @@
     "            description='NNDescent,Euclidean,None,None',\n",
     "            tfidf='None',\n",
     "            nearest_neighbors_kw=dict(metric='euclidean')) \n",
-    "config_dict[\"SimHash\"]=NearestNeighborsConfig(\n",
+    "config_dict[\"SimHash_Cosine_None_None\"]=NearestNeighborsConfig(\n",
     "            nearest_neighbors_method=SimHash,\n",
     "            description='SimHash,Cosine,None,None',\n",
-    "            tfidf='None') "
+    "            tfidf='None')\n",
+    "config_dict[\"SimHash_Cosine_None_TF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=SimHash,\n",
+    "            description='SimHash,Cosine,None,TF',\n",
+    "            tfidf='TF') \n",
+    "config_dict[\"SimHash_Cosine_None_IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=SimHash,\n",
+    "            description='SimHash,Cosine,None,IDF',\n",
+    "            tfidf='IDF') \n",
+    "config_dict[\"SimHash_Cosine_None_TF-IDF\"]=NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=SimHash,\n",
+    "            description='SimHash,Cosine,None,TF-IDF',\n",
+    "            tfidf='TF-IDF') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "14af36e7-5694-43ad-93d2-9ec99eacacd0",
    "metadata": {},
    "outputs": [],
@@ -2658,23 +2667,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "b7607a99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NearestNeighborsConfig(description='NNDescent,Euclidean,SpectralEmbedding,500,TF-IDF', tfidf='TF-IDF', dimension_reduction_method=<class 'dim_reduction.SpectralEmbedding'>, nearest_neighbors_method=<class 'nearest_neighbors.NNDescent'>)"
+       "NearestNeighborsConfig(description='SimHash,Cosine,None,TF', tfidf='TF', dimension_reduction_method=None, nearest_neighbors_method=<class 'nearest_neighbors.SimHash'>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config_dict[\"NNDescent_Euclidean_Spectural_500d_TF-IDF\"]"
+    "config_dict[\"SimHash_Cosine_None_TF\"]"
    ]
   },
   {
@@ -2833,9 +2842,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep_rl:container1.0",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deep_rl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2847,7 +2856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
